make csv files include all analyses

--- a/data/csv_files/Makefile
+++ b/data/csv_files/Makefile
@@ -6,15 +6,14 @@ R=R
 ROPTS=-q --no-save --no-restore-data
 PERL?=perl
 
-SPECIES=ateles_fusciceps bos_taurus canis_familiaris				\
-dasypus_novemcinctus equus_caballus homo_sapiens loxodonta_africana	\
-monodelphis_domestica mus_musculus spalax_galili ovis_aries	\
-pan_paniscus spalax_carmeli sus_scrofa
+all: all_species_mean_fpkm.txt.xz all_species_per_sample_fpkm.txt.xz
 
-SPECIES_FPKM=$(foreach specie,$(SPECIES),$(specie)_mean_fpkm.txt)
+%.txt.xz: %.txt
+	xz $<
 
-all: $(SPECIES_FPKM)
-
-
-$(SPECIES_FPKM): %_mean_fpkm.txt: species_fpkm.R ../combined_fpkm
+all_species_mean_fpkm.txt: species_fpkm.R ../combined_fpkm
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $* $@
+
+all_species_per_sample_fpkm.txt: species_per_sample_fpkm.R ../combined_fpkm_per_sample
+	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $* $@
+
