--- a/fastq/spalax_carmeli/Makefile
+++ b/fastq/spalax_carmeli/Makefile
@@ -11,6 +11,8 @@ COMMON_MAKEFILE=../common_makefile
 # this is not an ensembl assembly
 NOTENSEMBL=1
 
+NREADS=2
+
 # we'll need to use trinity to do the alignment
 USE_TRINITY=1
 PROTEIN_ALIGNMENT_SPECIES=mus_musculus
