add complete placenta transcriptome

--- a/data/Makefile
+++ b/data/Makefile
@@ -113,6 +113,15 @@ placenta_core_transcriptome: placenta_core_transcriptome.R combined_fpkm houseke
 placenta_core_transcriptome.txt: ../common_r_code/array_to_text.R placenta_core_transcriptome
 	$(R) $(ROPTS) -f $< --args placenta_core_transcriptome core.placenta.transcriptome.long $@
 
+placenta_core_transcriptome_complete: placenta_core_transcriptome_complete.R combined_fpkm \
+	housekeeping_genes_superset
+	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
+
+placenta_core_transcriptome_complete.txt: ../common_r_code/array_to_text.R \
+	placenta_core_transcriptome_complete
+	$(R) $(ROPTS) -f $< --args placenta_core_transcriptome_complete \
+		placenta.core.transcriptome.complete $@
+
 placenta_go_results_mf: go_analysis.R placenta_core_transcriptome
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,2,$^) placenta.transcriptome.list MF $@
 
