--- a/data/.gitignore
+++ b/data/.gitignore
@@ -14,6 +14,8 @@ ensembl_orthologs
 homology_table
 hugo_nomenclature
 placenta_core_transcriptome
+placenta_core_transcriptome_complete
+placenta_core_transcriptome_alignment
 placenta_go_results_??
 placenta_go_results_permissive_??
 placenta_lineage_specific
@@ -29,3 +31,4 @@ placenta_classification_p
 placenta_classification
 placenta_classification_go_??_*
 placenta_netpath_results
+ortholog_expression_nexus.nex*
