ignore more filex, change extended supplement path

--- a/manuscript/.gitignore
+++ b/manuscript/.gitignore
@@ -14,11 +14,19 @@ figure
 *.rip
 manuscript.tex
 supplemental_material.tex
+extended_supplemental_material.tex
+extended_discussion.tex
 cache
 supplemental_cache
+supplemental_figure
+extended_discussion_cache
+extended_discussion_figure
+extended_supplemental_material_cache
+extended_supplemental_material_figure
 *.lof
 *.lot
 *.toc
 *.fff
 *.ttt
 references.bib
+*.spl
