--- a/data/.gitignore
+++ b/data/.gitignore
@@ -32,3 +32,4 @@ placenta_classification
 placenta_classification_go_??_*
 placenta_netpath_results
 ortholog_expression_nexus.nex*
+rna_tissue.csv.zip
