--- a/data/Makefile
+++ b/data/Makefile
@@ -207,6 +207,9 @@ ortholog_expression_nexus.nex: ortholog_expression_nexus.R combined_fpkm houseke
 ortholog_expression_nexus_continuous.nex: ortholog_expression_nexus_continuous.R combined_fpkm housekeeping_genes_superset
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
 
+rna_tissue.csv.zip:
+	wget -O $@ "http://www.proteinatlas.org/download/rna_tissue.csv.zip"
+
 ALL_TARGETS:=combined_fpkm gene_trees housekeeping_genes_superset		\
 	placenta_core_transcriptome placenta_core_transcriptome_alignment	\
 	placenta_go_results_bp placenta_go_results_mf hugo_nomenclature		\
@@ -214,7 +217,7 @@ ALL_TARGETS:=combined_fpkm gene_trees housekeeping_genes_superset		\
 	placenta_lineage_specific combined_fpkm_per_sample homology_table	\
 	placenta_classification_p $(GSEA_SET_ANALYSES)						\
 	$(PATHWAY_PLAC_CLASS) $(BP_GO_PLAC_CLASS) $(MF_GO_PLAC_CLASS) \
-	gene_trees human_mouse_lineage_specific
+	gene_trees human_mouse_lineage_specific rna_tissue.csv.zip
 
 .PHONY: get_data
 
