--- a/data/.gitignore
+++ b/data/.gitignore
@@ -14,6 +14,7 @@ ensembl_orthologs
 homology_table
 hugo_nomenclature
 placenta_core_transcriptome
+placenta_core_tree_transcriptome
 placenta_core_transcriptome_complete
 placenta_core_transcriptome_alignment
 placenta_go_results_??
